--- a/locale/cs/LC_MESSAGES/djangojs.po
+++ b/locale/cs/LC_MESSAGES/djangojs.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-03-13 10:43+0000\n"
+"POT-Creation-Date: 2024-03-13 14:03+0000\n"
 "PO-Revision-Date: 2024-03-13 10:43+0000\n"
 "Last-Translator: Ondřej Nejedlý <jsmesami@gmail.com>\n"
 "Language-Team: CZ <jsmesami@gmail.com>\n"
@@ -30,6 +30,9 @@ msgstr "Domů"
 
 msgid "Could not create site: \"{err}\""
 msgstr "Nelze vytvořit web: \"{err}\""
+
+msgid "Creating"
+msgstr "Vytváření"
 
 msgid "Create Site"
 msgstr "Vytvořit web"
@@ -99,6 +102,9 @@ msgstr "Dostupné weby"
 
 msgid "No sites yet"
 msgstr "Zatím žádné weby"
+
+msgid "Important for search engines optimization"
+msgstr "Důležité k optimalizaci pro vyhledávače"
 
 msgid "Site \"{title}\" has been successfully deleted."
 msgstr "Web \"{title}\" byl úspěšně smazán."
