Limit number of pages that can be created within a website

--- a/locale/cs/LC_MESSAGES/django.po
+++ b/locale/cs/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-03-11 15:11+0000\n"
+"POT-Creation-Date: 2024-03-23 09:39+0000\n"
 "PO-Revision-Date: 2024-03-13 10:43+0000\n"
 "Last-Translator: Ondřej Nejedlý <jsmesami@gmail.com>\n"
 "Language-Team: CZ <jsmesami@gmail.com>\n"
@@ -46,8 +46,9 @@ msgstr "Zdá se, že se něco pokazilo!"
 msgid ""
 "We track these errors automatically, but if the problem persists feel free "
 "to contact us. In the meantime, try refreshing."
-msgstr "Tyto chyby sledujeme automaticky, ale pokud problém přetrvává, "
-"neváhejte nás kontaktovat. Mezitím zkuste znovu načíst okno prohlížeče."
+msgstr ""
+"Tyto chyby sledujeme automaticky, ale pokud problém přetrvává, neváhejte nás "
+"kontaktovat. Mezitím zkuste znovu načíst okno prohlížeče."
 
 msgid "Portfolio website generator"
 msgstr "Generátor webového portfolia"
@@ -114,6 +115,10 @@ msgstr "alt."
 
 msgid "caption"
 msgstr "legenda"
+
+#, python-brace-format
+msgid "Maximum pages per website is {max}."
+msgstr "Maximální počet stránek na web je {max}."
 
 msgid "Websites"
 msgstr "Weby"
