Whip basic image upload

--- a/locale/cs/LC_MESSAGES/djangojs.po
+++ b/locale/cs/LC_MESSAGES/djangojs.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-03-25 23:10+0000\n"
+"POT-Creation-Date: 2024-04-18 14:28+0000\n"
 "PO-Revision-Date: 2024-03-13 10:43+0000\n"
 "Last-Translator: Ondřej Nejedlý <jsmesami@gmail.com>\n"
 "Language-Team: CZ <jsmesami@gmail.com>\n"
@@ -252,3 +252,6 @@ msgstr "Upravit detaily webu"
 
 msgid "Preview"
 msgstr "Náhled"
+
+msgid "New Photo"
+msgstr "Nová fotka"
