Implement basic gallery widget

--- a/locale/cs/LC_MESSAGES/djangojs.po
+++ b/locale/cs/LC_MESSAGES/djangojs.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-18 14:28+0000\n"
+"POT-Creation-Date: 2024-04-20 14:27+0000\n"
 "PO-Revision-Date: 2024-03-13 10:43+0000\n"
 "Last-Translator: Ondřej Nejedlý <jsmesami@gmail.com>\n"
 "Language-Team: CZ <jsmesami@gmail.com>\n"
@@ -51,6 +51,9 @@ msgstr "Zavřít"
 
 msgid "Proceed"
 msgstr "Pokračovat"
+
+msgid "Could upload images"
+msgstr "Nelze nahrát obrázky"
 
 msgid "Deleting a page is irreversible and removes all of its content."
 msgstr "Smazání stránky je nevratný krok, který odstraní veškerý její obsah."
@@ -253,5 +256,8 @@ msgstr "Upravit detaily webu"
 msgid "Preview"
 msgstr "Náhled"
 
-msgid "New Photo"
-msgstr "Nová fotka"
+msgid "Upload images"
+msgstr "Nahrát obrázky"
+
+msgid "Upload Photo"
+msgstr "Nahrát fotku"
