--- a/locale/cs/LC_MESSAGES/djangojs.po
+++ b/locale/cs/LC_MESSAGES/djangojs.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-20 14:27+0000\n"
+"POT-Creation-Date: 2024-05-31 15:23+0000\n"
 "PO-Revision-Date: 2024-03-13 10:43+0000\n"
 "Last-Translator: Ondřej Nejedlý <jsmesami@gmail.com>\n"
 "Language-Team: CZ <jsmesami@gmail.com>\n"
@@ -183,6 +183,9 @@ msgstr "Uložit"
 
 msgid "Cancel"
 msgstr "Zrušit"
+
+msgid "Editable markdown"
+msgstr "Editovatelný markdown"
 
 msgid "Edit page details"
 msgstr "Upravit detaily stránky"
